# ml-algo

./: .gitignore  ALGORITHM_COMPARISON.md  GLOSSARY.md  PROGRESS_TRACKER.md  README.md  WARP.md  algorithm_recommender.py  hello.py  progress_tracker.py  pyproject.toml  quick_start.py
01_supervised_learning/: README.md
01_supervised_learning/01_linear_regression/: README.md  exercise.ipynb  exercise_EN.md  exercise_en.ipynb  implementation.py  sklearn_example.py
01_supervised_learning/02_logistic_regression/: README.md  exercise.ipynb  implementation.py  sklearn_example.py
01_supervised_learning/03_decision_trees/: README.md  implementation.py  sklearn_example.py
01_supervised_learning/04_random_forest/: README.md  exercise.ipynb  implementation.py  sklearn_example.py
02_unsupervised_learning/: README.md
03_reinforcement_learning/: README.md
04_advanced_topics/: README.md
04_advanced_topics/04_xgboost/: README.md  exercise.ipynb  implementation.py  sklearn_example.py
06_playground/: README.md  algorithm_animator.py  algorithm_race.py  data_generator.py  demo_algorithm_race.py  feature_lab.py  learning_curves.py  model_visualizer.py  parameter_playground.py  playground_launcher.py
08_cheat_sheets/: README.md
08_cheat_sheets/01_algorithms/: algorithm_selection_flowchart.md  algorithms_quick_reference.md
08_cheat_sheets/02_python_sklearn/: pandas_numpy_essentials.md  sklearn_quick_reference.md
08_cheat_sheets/03_math_statistics/: essential_formulas.md
cheat_sheets/: README.md  interactive_generator.py
(+14 files in other folders)
