[project]
name = "ml-algorithms-learning"
version = "0.1.0"
description = "Comprehensive Machine Learning Algorithms Learning Repository"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core data science libraries
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.11.0",
    "plotly>=5.10.0",
    
    # Machine learning libraries
    "scikit-learn>=1.2.0",
    "xgboost>=1.7.0",
    
    # Jupyter and development
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
    
    # Model interpretation and visualization
    # "shap>=0.41.0",  # Commented out due to Python 3.11 compatibility issue
    
    # Utilities
    "tqdm>=4.60.0",
    "joblib>=1.2.0",
    "requests>=2.28.0",
]
